--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "dayjs": "^1.11.10",
     "react-hook-form": "^7.49.2",
     "yup": "^1.3.3",
-    "@hookform/resolvers": "^3.3.2"
+    "@hookform/resolvers": "^3.3.2",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "13.9.0",
+    "expo-sharing": "~11.10.0",
+    "expo-file-system": "~16.0.6",
+    "react-native-pdf": "^6.7.0",
+    "expo-appearance": "~0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
